--- a/src/assets/css/components/_hero.css
+++ b/src/assets/css/components/_hero.css
@@ -9,7 +9,7 @@
   min-height: calc(100svh - var(--header-height));
   margin-inline: auto;
   padding-inline: var(--space-xl);
-  padding-block: unset;
+  padding-block: var(--space-md);
 
   display: flex;
   flex-direction: row;
